# Multithread_Programming_Classic_Problem

./: README.md
Bakery_Problem/: CH2_bakery.cpp  CMakeLists.txt  build_doc.sh
Page_Replacement/: CMakeLists.txt  main.cpp
Problem_Set_1/: CMakeLists.txt  EX3_producer-consumer.cpp
dining_philosophers/: EX1_dining_philosophers.cpp  EX5_hat_color.cpp
multithread_matrix_calculation/: CMakeLists.txt  main.cpp
producer-consumer/: CMakeLists.txt  main.c
tas_ttas_lock/: CH7_lock_tas.cpp  CH7_lock_ttas.cpp  CMakeLists.txt  ch7_hw.docx  readme  result.py  run.sh
toy_app_c/: CMakeLists.txt  main.c
